Commit 1: Edited index + url's

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Status Page</title>
+    <title>Jonah Brandwagt Status Page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="index.css" />
     <script src="index.js"></script>
@@ -43,7 +43,7 @@
       </div>
     </div>
     <footer>
-      Forked from
+      Credits to
       <a href="https://github.com/statsig-io/statuspage/"
         >Statsig's Open-Source Status Page</a
       >.
